--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "node-fetch": "^2.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
